--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,10 +15,10 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.4+27
 
 environment:
-  sdk: ">=2.16.1 <3.0.0"
+  sdk: ">=2.7.0 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -30,14 +30,114 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  null_safety_percentage: ^2.1.1
+
   cupertino_icons: ^1.0.2
+
+
+
+  extended_image:
+    git: https://github.com/inspireui/extended_image.git
+  flutter_svg: ^0.23.0+1
+  carousel_slider: ^4.0.0
+  url_launcher: ^6.0.7
+  android_intent_plus: ^3.1.5
+  percent_indicator: ^4.0.0
+  syncfusion_flutter_sliders: ^19.4.47
+  flutter_rating_bar: ^4.0.0
+
+  google_fonts: ^2.2.0
+  animations: ^2.0.2
+  # https://pub.dev/packages/shared_preferences
+  shared_preferences: ^2.0.5
+  #https://pub.dev/packages/fluttertoast
+  fluttertoast: ^8.0.8
+  #https://pub.dev/packages/provider
+  provider: ^6.0.1
+  #https://pub.dev/packages/device_preview
+  #device_preview: ^0.7.4
+  #https://pub.dev/packages/get
+  get: ^4.1.4
+  #https://pub.dev/packages/get_storage
+  get_storage: ^2.0.2
+  #https://pub.dev/packages/device_info
+  device_info: ^2.0.0
+  #https://pub.dev/packages/material_floating_search_bar
+  material_floating_search_bar: ^0.2.6
+  #https://pub.dev/packages/favorite_button
+  favorite_button: ^0.0.4
+  #https://pub.dev/packages/flushbar
+  flushbar: ^1.10.4
+  #https://pub.dev/packages/dropdown_button2
+  dropdown_button2: ^1.3.0
+  #https://pub.dev/packages/cached_network_image
+  cached_network_image: ^3.2.0
+  #https://pub.dev/packages/flutter_blurhash/install
+  flutter_blurhash: ^0.6.4
+  #https://pub.dev/packages/flutter_spinkit
+  flutter_spinkit: ^5.1.0
+  #https://pub.dev/packages/fancy_shimmer_image
+  fancy_shimmer_image: ^2.0.2
+
+  #https://pub.dev/packages/slimy_card
+  slimy_card: ^1.0.4
+  #https://pub.dev/packages/smooth_star_rating
+  smooth_star_rating: 1.1.1
+  #https://pub.dev/packages/flutter_range_slider
+  flutter_range_slider: "^1.5.0"
+  #https://pub.dev/packages/flutter_launcher_icons
+  flutter_launcher_icons: "^0.9.2"
+  #https://pub.dev/packages/flutter_fast_forms
+  flutter_fast_forms: ^5.0.0
+  #https://pub.dev/packages/image_picker
+  image_picker: 0.8.5
+  #https://pub.dev/packages/dropdown_search
+  dropdown_search: ^2.0.1
+  #https://pub.dev/packages/rating_dialog
+  rating_dialog: 2.0.3
+  #https://pub.dev/packages/font_awesome_flutter
+  font_awesome_flutter: 9.2.0
+  #https://pub.dev/packages/connectivity_plus
+  connectivity_plus: ^1.1.0
+  #https://pub.dev/packages/multi_select_flutter
+  multi_select_flutter: ^4.1.2
+  #https://pub.dev/packages/curved_navigation_bar
+  curved_navigation_bar: ^1.0.3
+  flutter_math_fork: ^0.5.0
+  device_preview: ^1.0.0
+  device_preview_screenshot: ^1.0.0
+  launch_review: ^1.0.1
+  toggle_switch: ^2.0.1
+  lazy_load_listview: ^0.0.4
+  lazy_load_scrollview: ^1.3.0
+  package_info_plus: ^1.0.6
+  flutter_cache_manager: ^3.1.0
+  flutter_icons: ^1.1.0
+  google_sign_in: ^5.2.1
+  just_audio: ^0.9.5
+  audio_session: ^0.1.16
+  flutter_local_notifications: ^9.5.3+1
+
+  flutter_localizations:
+    sdk: flutter
+  #stacked_notification_cards: ^0.1.0-dev.2
+  data_table_2: ^2.2.1
+  syncfusion_flutter_datagrid:
+  flutter_image_compress: ^1.1.2
+  flutter_native_image: ^0.0.6+1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_html: ^2.2.1
+  flutter_widget_from_html: ^0.8.5
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/logo2.png"
+  # The following section is specific to Flutter.
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -45,6 +145,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+  carousel_slider: ^4.0.0
+  syncfusion_flutter_sliders: ^19.4.47
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -58,8 +160,27 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
+    - assets/images/logo.png
+    - assets/images/instagram.png
+    - assets/images/priceTag.svg
+    - assets/images/truck.png
+    - assets/images/logo-afiri-bleu.png
+    - assets/images/logo-afiri-white.png
+    - assets/icons/phone-placeholder.png
+    - assets/icons/tabs/icon-home.png
+    - assets/icons/tabs/icon-cart2.png
+    - assets/icons/tabs/icon-search.png
+    - assets/icons/tabs/icon-lists.png
+    - assets/icons/tabs/icon-user.png
+    - assets/test_main_adv/s1.jpg
+    - assets/test_main_adv/s2.jpg
+    - assets/test_main_adv/s3.jpg
+    - assets/test_main_promo/promo1.jpg
+    - assets/test_main_promo/promo2.jpg
+    - assets/test_main_promo/promo3.jpg
+    - assets/test_main_promo/promo4.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
