--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: marlet_app
+name: affiri
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.4+27
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.16.1 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -38,7 +38,7 @@ dependencies:
 
 
 
-  
+
   flutter_svg: ^0.23.0+1
   carousel_slider: ^4.0.0
   url_launcher: ^6.0.7
@@ -80,57 +80,14 @@ dependencies:
   #https://pub.dev/packages/fancy_shimmer_image
   fancy_shimmer_image: ^2.0.2
 
-  #https://pub.dev/packages/slimy_card
-  slimy_card: ^1.0.4
-  #https://pub.dev/packages/smooth_star_rating
-  smooth_star_rating: 1.1.1
-  #https://pub.dev/packages/flutter_range_slider
-  flutter_range_slider: "^1.5.0"
-  #https://pub.dev/packages/flutter_launcher_icons
-  flutter_launcher_icons: "^0.9.2"
-  #https://pub.dev/packages/flutter_fast_forms
-  flutter_fast_forms: ^5.0.0
-  #https://pub.dev/packages/image_picker
-  image_picker: 0.8.5
-  #https://pub.dev/packages/dropdown_search
-  dropdown_search: ^2.0.1
-  #https://pub.dev/packages/rating_dialog
-  rating_dialog: 2.0.3
-  #https://pub.dev/packages/font_awesome_flutter
-  font_awesome_flutter: 9.2.0
-  #https://pub.dev/packages/connectivity_plus
-  connectivity_plus: ^1.1.0
-  #https://pub.dev/packages/multi_select_flutter
-  multi_select_flutter: ^4.1.2
-  #https://pub.dev/packages/curved_navigation_bar
-  curved_navigation_bar: ^1.0.3
-  flutter_math_fork: ^0.5.0
-  device_preview: ^1.0.0
-  device_preview_screenshot: ^1.0.0
-  launch_review: ^1.0.1
-  toggle_switch: ^2.0.1
-  lazy_load_listview: ^0.0.4
-  lazy_load_scrollview: ^1.3.0
-  package_info_plus: ^1.0.6
-  flutter_cache_manager: ^3.1.0
-  flutter_icons: ^1.1.0
-  google_sign_in: ^5.2.1
 
-  flutter_local_notifications: ^9.5.3+1
+  # The following adds the Cupertino Icons font to your application.
+  # Use with the CupertinoIcons class for iOS style icons.
 
-  flutter_localizations:
-    sdk: flutter
-  #stacked_notification_cards: ^0.1.0-dev.2
-  data_table_2: ^2.2.1
-  syncfusion_flutter_datagrid:
-  flutter_image_compress: ^1.1.2
-  flutter_native_image: ^0.0.6+1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_html: ^2.2.1
-  flutter_widget_from_html: ^0.8.5
 flutter_icons:
   android: true
   ios: true
@@ -143,8 +100,6 @@ flutter_icons:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
-  carousel_slider: ^4.0.0
-  syncfusion_flutter_sliders: ^19.4.47
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
